language/tests/error/InvalidAssignmentInAssignment.sl
def main() {
  x = 42 = 42;
}
